# crispy-waffle

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: publish_extension.yml  workspace.yml
halo2-wasm/scripts/: build.sh
halo2-wasm/template/: Cargo.toml
halo2-wasm/template/benches/: benches.rs
halo2-wasm/template/example/: README.md  package.json  pnpm-lock.yaml
halo2-wasm/template/example/src/: worker.ts
halo2-wasm/template/src/: lib.rs
shielder/: Cargo.toml  README.md
shielder-circuits/: Cargo.toml  README.md
shielder-circuits/.cargo/: config
shielder-circuits/src/: hammster.rs  lib.rs  main.rs  merkle.rs  wasm.rs
shielder-extension/: .gitignore  NOTES.md  README.md  background.ts  package.json  pnpm-lock.yaml  prover.ts  worker.ts
shielder-runner-web/: README.md  package.json  pnpm-lock.yaml  webpack.config.js
shielder-runner-web/src/: index.ts  worker.ts
shielder-sdk/: package.json  pnpm-lock.yaml  tsconfig.json
shielder-sdk/src/: index.ts
shielder-ts/: .prettierignore  README.md  nx.json  package.json  pnpm-lock.yaml
shielder-ts/apps/shielder-extension/: NOTES.md  background.ts  package.json  popup.tsx  prover.ts
shielder-ts/apps/shielder-runner-web/: README.md  package.json  playwright.config.mjs  tests.spec.mjs  tsconfig.json  webpack.config.js
shielder-ts/apps/shielder-runner-web/src/: index.ts  worker.ts
shielder-ts/scripts/: postinstall.bash
shielder-wasm/: Cargo.toml  README.md
shielder-wasm/scripts/: build.bash  test_ci.bash
shielder-wasm/src/: lib.rs
shielder-wasm/tests/: browser.rs  node.rs  web_worker.rs
shielder/benches/: bench.rs  bench_main.rs
shielder/benches/benchmarks/: my_circuit.rs
shielder/benches/circuits/: hammster.rs  merkle.rs  mod.rs
shielder/src/: bindings_wasm.rs  lib.rs  wasm.rs
shielder/src/circuits/: merkle.rs
shielder/tests/: mod.rs
