[workspace]
resolver = "2"
members = [
    "halo2-wasm",
    "shielder",
    "shielder-wasm",
]

[profile.dev]
opt-level = 3
debug = 2 # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "unwind"
incremental = false

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Enabling optimizations to make sure the tests are running in a reasonable time
[profile.test]
opt-level = 3
debug = true
lto = true

[patch."https://github.com/Cardinal-Cryptography/halo2-lib.git"]
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
halo2_proofs = { path = "../pse-halo2/halo2_proofs" }

[patch.crates-io]
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
halo2_proofs = { path = "../pse-halo2/halo2_proofs" }

[patch."https://github.com/Cardinal-Cryptography/pse-halo2.git"]
halo2_proofs = { path = "../pse-halo2/halo2_proofs" }
