[workspace]
resolver = "2"
members = [
    "shielder",
    "shielder-circuits",
    "shielder-wasm",
]

[profile.dev]
opt-level = 3
debug = 2 # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "unwind"
incremental = false

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Enabling optimizations to make sure the tests are running in a reasonable time
[profile.test]
opt-level = 3
debug = true
lto = true
