[workspace]
resolver = "2"
members = ["shielder", "shielder-wasm"]
exclude = [
    # Fixes cargo-machete false-positives in node_modules
    "shielder-ts/node_modules",
]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
criterion = "0.5.1"
getrandom = "0.2"
halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph" }
halo2curves = { version = "0.6.0", default-features = false }
js-sys = "0.3.61"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8"
shielder = { path = "shielder" }
wasm-bindgen = "0.2.92"
#wasm-bindgen-rayon = { path = "/home/piotr/Documents/projects/wasm-bindgen-rayon" }
wasm-bindgen-rayon = "1.2.1"
wasm-bindgen-test = "0.3.42"

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "unwind"
incremental = false

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Enabling optimizations to make sure the tests are running in a reasonable time
[profile.test]
opt-level = 3
debug = true
lto = true
