[package]
name = "shielder-circuits"
version = "0.1.0"
edition = "2021"

[lib]
name = "shielder_circuits"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2curves = { version = "0.6.0", default-features = false }
halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "halo2-cc", package = "halo2_proofs" }
rand_core = "0.6.4"

# WASM dependencies:
getrandom = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }
js-sys = { version = "0.3.61", optional = true }
rayon = { version = "1.8", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-rayon = { version = "=1.1.3", optional = true }

[features]
default = []
wasm = ["getrandom/js", "wasm-bindgen", "js-sys"]
multithreading = ["rayon", "wasm-bindgen-rayon"]

[package.metadata.cargo-machete]
ignored = ["getrandom", "rayon", "wasm_bindgen_rayon"]
