[package]
name = "shielder-circuits"
version = "0.1.0"
edition = "2021"

[lib]
name = "shielder_circuits"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2curves = { workspace = true }
halo2_proofs = { workspace = true }
rand_core = { workspace = true }
getrandom = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
halo2_poseidon = { git = "https://github.com/Cardinal-Cryptography/poseidon-gadget", branch = "aleph", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-rayon = { workspace = true, optional = true }

[features]
default = []
wasm = ["getrandom/js", "wasm-bindgen", "js-sys"]
multithreading = ["rayon", "wasm-bindgen-rayon"]

[package.metadata.cargo-machete]
ignored = ["getrandom", "rayon", "wasm_bindgen_rayon"]
