[package]
name = "shielder-wasm"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = []
repository = "https://github.com/piotr-roslaniec/crispy-waffle"
description = "WASM bindings for shielder"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shielder = { workspace = true, features = ["wasm"] }
wasm-bindgen = { workspace = true }
rayon = { workspace = true, optional = true }
wasm-bindgen-rayon = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []
multithreading = ["rayon", "wasm-bindgen-rayon", "shielder/multithreading"]

[package.metadata.cargo-machete]
ignored = ["rayon", "wasm-bindgen"]
