[package]
name = "shielder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/piotr-roslaniec/crispy-waffle"
readme = "README.md"
description = ""
keywords = []
categories = []
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]

[lib]
bench = false

[dependencies]
shielder-circuits = { path = "../shielder-circuits" }
# WASM bindings:
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3.63", optional = true }
wasm-bindgen = { version = "0.2.86", optional = true }
wasm-bindgen-derive = { version = "0.2.1", optional = true }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
# WASM bindings:
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

[features]
#default = []
default = ["wasm"]
# TODO: How do we wrangle rayon into "wasm" build?
wasm = [
    "console_error_panic_hook",
    "getrandom",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-derive",
    "shielder-circuits/wasm",
    #    "rayon"
]
#rayon = ["halo2-wasm/rayon"]

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "getrandom",
]

