[package]
name = "shielder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/piotr-roslaniec/crispy-waffle"
readme = "README.md"
description = ""
keywords = []
categories = []
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]

[lib]
bench = false

[dependencies]
shielder-circuits = { path = "../shielder-circuits" }
rand = "0.8.5"
# WASM bindings:
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.86", optional = true }

[dev-dependencies]
criterion = "0.4.0"
# WASM bindings:
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

[features]
default = []
wasm = [
    "getrandom",
    "wasm-bindgen",
    "shielder-circuits/wasm",
]
multithreading = ["shielder-circuits/multithreading"]

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "getrandom",
]

