[package]
name = "shielder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/piotr-roslaniec/crispy-waffle"
readme = "README.md"
description = ""
keywords = []
categories = []
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]

[lib]
bench = false

[dependencies]
shielder-circuits = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true, features = ["js"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }

[features]
default = []
wasm = [
    "getrandom",
    "wasm-bindgen",
    "shielder-circuits/wasm",
]
multithreading = ["shielder-circuits/multithreading"]

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = ["getrandom"]

